--- a/src/Pages/Download/Download.css
+++ b/src/Pages/Download/Download.css
@@ -4,10 +4,8 @@
 	z-index: -1;
 	background-image: url("https://i0.wp.com/saintpolicesystems.com/wp-content/uploads/2018/06/blue-light-backgrounds-background-opera-image-graphics-community-speeddials.jpg");
 	background-repeat: no-repeat;
-	background-size: 1920px 1080px;
+	background-size: 100% 100%;
 	background-position: center;
-	width: 100%;
-	height: 100%;
 
 	/*
 	-webkit-filter: blur(5px);
