--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -15,19 +15,12 @@
 	z-index: -1;
 	background-image: url("https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg");
 	background-repeat: no-repeat;
-	background-size: 1920px 1080px;
+	background-size: 100% 100%;
 	background-position: center;
-	width: 100%;
-	height: 100%;
 
 	-webkit-filter: blur(5px);
 	-moz-filter: blur(5px);
 	-o-filter: blur(5px);
 	-ms-filter: blur(5px);
 	filter: blur(5px);
-}
-
-#Homepage {
-	z-index: 0;
-	padding-top: 50px;
 }
