--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -1,1 +1,21 @@
+#Contact::before {
+	content: "";
+	position: fixed;
+	z-index: -1;
+	background-image: url("https://i0.wp.com/saintpolicesystems.com/wp-content/uploads/2018/06/blue-light-backgrounds-background-opera-image-graphics-community-speeddials.jpg");
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	background-position: center;
 
+	/*
+	-webkit-filter: blur(5px);
+	-moz-filter: blur(5px);
+	-o-filter: blur(5px);
+	-ms-filter: blur(5px);
+	filter: blur(5px);*/
+}
+
+#Contact {
+	z-index: 0;
+	padding-top: 50px;
+}
