--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -24,3 +24,13 @@
 	-ms-filter: blur(5px);
 	filter: blur(5px);
 }
+
+img {
+	position: absolute;
+	left: auto;
+	right: auto;
+	top: 50%;
+	-webkit-transform: translateY(-50%) !important;
+	-ms-transform: translateY(-50%) !important;
+	transform: translateY(-50%) !important;
+}
