--- a/src/Pages/Download/Download.css
+++ b/src/Pages/Download/Download.css
@@ -2,7 +2,7 @@
 	content: "";
 	position: fixed;
 	z-index: -1;
-	background-image: url("https://i0.wp.com/saintpolicesystems.com/wp-content/uploads/2018/06/blue-light-backgrounds-background-opera-image-graphics-community-speeddials.jpg");
+	background-image: url("/base_back.jpeg");
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	background-position: center;
