--- a/src/Pages/Projects/Projects.css
+++ b/src/Pages/Projects/Projects.css
@@ -6,7 +6,7 @@
 	content: "";
 	position: fixed;
 	z-index: -1;
-	background-image: url("https://www.bounteous.com/sites/default/files/styles/default/public/insights/2019-10/previews/20191003_blog_scoping_a_data_science_project_in_a_smarter_way_website.png");
+	background-image: url("/projects_back.png");
 	background-repeat: no-repeat;
 	background-size: 1920px 1080px;
 	background-position: center;
