--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -18,14 +18,14 @@
 	background-size: 100% 100%;
 	background-position: center;
 
-	-webkit-filter: blur(5px);
-	-moz-filter: blur(5px);
-	-o-filter: blur(5px);
-	-ms-filter: blur(5px);
-	filter: blur(5px);
+	-webkit-filter: blur(50px);
+	-moz-filter: blur(50px);
+	-o-filter: blur(50px);
+	-ms-filter: blur(50px);
+	filter: blur(50px);
 }
 
-#Homepage img {
+/*#Homepage img {
 	position: absolute;
 	left: auto;
 	right: auto;
@@ -33,4 +33,4 @@
 	-webkit-transform: translateY(-50%) !important;
 	-ms-transform: translateY(-50%) !important;
 	transform: translateY(-50%) !important;
-}
+}*/
