Updates to animations and other minor fixes

--- a/src/Pages/Freelance/Freelance.css
+++ b/src/Pages/Freelance/Freelance.css
@@ -17,11 +17,7 @@
 	margin-top: 50px;
 }
 
-#Freelance .m-25 {
-	margin-top: 25px;
-}
-
 #Freelance img {
 	width: 200px;
-	height: 200px;
+	max-height: 200px;
 }
