--- a/src/animations.css
+++ b/src/animations.css
@@ -15,23 +15,23 @@
 
 @keyframes fadeIn {
 	0% {
-		opacity: 0%;
+		opacity: 0;
 		filter: blur(5px);
 	}
 	100% {
-		opacity: 100%;
+		opacity: 1;
 		filter: blur(0px);
 	}
 }
 
 @-webkit-keyframes fadeIn {
 	0% {
-		opacity: 0%;
-		filter: blur(5px);
+		-webkit-opacity: 0;
+		-webkit-filter: blur(5px);
 	}
 	100% {
-		opacity: 100%;
-		filter: blur(0px);
+		-webkit-opacity: 1;
+		-webkit-filter: blur(0px);
 	}
 }
 
