--- a/src/Pages/Download/Download.css
+++ b/src/Pages/Download/Download.css
@@ -1,21 +1,5 @@
-#Download::before {
-	content: "";
-	position: fixed;
-	z-index: -1;
-	background-image: url("/base_back.jpeg");
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	background-position: center;
-
-	/*
-	-webkit-filter: blur(5px);
-	-moz-filter: blur(5px);
-	-o-filter: blur(5px);
-	-ms-filter: blur(5px);
-	filter: blur(5px);*/
-}
-
 #Download {
 	z-index: 0;
 	padding-top: 50px;
+	background-color: var(--secondary-dark);
 }
