--- a/src/CSS/animations.css
+++ b/src/CSS/animations.css
@@ -130,6 +130,24 @@
     margin-left: 50px;
   }
 }
+.fly-in-topV {
+  animation-name: flyInTop;
+  animation-iteration-count: 1, 1;
+  animation-duration: 1s, 1s;
+  -webkit-animation-name: flyInTop;
+  -webkit-animation-iteration-count: 1, 1;
+  -webkit-animation-duration: 1s, 1s;
+}
+
+.fly-out-topV {
+  animation-name: flyOutTop;
+  animation-iteration-count: 1, 1;
+  animation-duration: 1s, 1s;
+  -webkit-animation-name: flyOutTop;
+  -webkit-animation-iteration-count: 1, 1;
+  -webkit-animation-duration: 1s, 1s;
+}
+
 .anim-speed-1 {
   transition-duration: 1s !important;
   animation-duration: 1s !important;
