Updates to site styling and bug fixes - Fixed backgrounds not showing on some pages - Fixed background black bars on videos on home page - Updated project page styling - Updated about me page styling

--- a/src/Pages/Projects/Projects.css
+++ b/src/Pages/Projects/Projects.css
@@ -6,7 +6,7 @@
 	content: "";
 	position: fixed;
 	z-index: -1;
-	background-image: url("~/public/projects_back.png");
+	background-image: url("~/projects_back.png");
 	background-repeat: no-repeat;
 	background-size: 1920px 1080px;
 	background-position: center;
