--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -2,7 +2,7 @@
 	content: "";
 	position: fixed;
 	z-index: -1;
-	background-image: url("~/public/base_back.jpeg");
+	background-image: url("~/base_back.jpeg");
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	background-position: center;
