--- a/src/CSS/global.scss
+++ b/src/CSS/global.scss
@@ -1,185 +1,190 @@
 :root {
-	--primary-dark: #2B2D42;
-	--primary-light: #8D99AE;
-	--primary-accent: #F8F32B;
-	--secondary-dark: #000;
-	--secondary-light: #fff;
+    --primary-dark: #2b2d42;
+    --primary-light: #8d99ae;
+    --primary-accent: #f8f32b;
+    --secondary-dark: #000;
+    --secondary-light: #fff;
 }
 
 ::-webkit-scrollbar {
-	width: 10px;
+    width: 10px;
 }
 
 ::-webkit-scrollbar {
-	background: var(--secondary-dark);
+    background: var(--secondary-dark);
 }
 
 ::-webkit-scrollbar-thumb {
-	background: var(--primary-dark);
+    background: var(--primary-dark);
 }
 
 #app {
-	font-family: Consolas, monaco, monospace !important;
+    font-family: Consolas, monaco, monospace !important;
 }
 
 #app > .container::before {
-	height: 100%;
-	width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 #app > .container {
-	height: 100vh;
-	width: 100%;
-	padding-top: 62px;
-	max-width: none !important;
-	margin-left: auto;
-	margin-right: auto;
-	padding-left: 0;
-	padding-right: 0;
-	overflow-y: auto;
-	overflow-x: hidden;
+    height: 100vh;
+    width: 100%;
+    padding-top: 62px;
+    max-width: none !important;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0;
+    padding-right: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
+    scrollbar-gutter: stable;
 }
 
 a {
-	color: var(--primary-accent);
-	transition: all 750ms;
+    color: var(--primary-accent);
+    transition: all 750ms;
 }
 
 a:hover {
-	color: var(--secondary-dark);
+    color: var(--secondary-dark);
 }
 
 .text-pl a:hover {
-	color: var(--primary-light);
+    color: var(--primary-light);
 }
 
 .navbar {
-	position: fixed;
-	right: 0;
-	left: 0;
-	z-index: 2;
-	overflow-y: visible !important;
-	max-height: 200px !important;
+    position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 2;
+    overflow-y: visible !important;
+    max-height: 200px !important;
 }
 
 #Footer {
-	position: fixed;
-	right: 0;
-	left: 0;
-	bottom: 0;
-	z-index: 2;
+    position: fixed;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 2;
 }
 
 .disabled-cursor {
-	pointer-events: none;
+    pointer-events: none;
 }
 
 .hidden {
-	opacity: 0;
+    opacity: 0;
 }
 
 .row {
-	margin-left: auto;
-	margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .dropdown-content {
-	display: none;
-	position: absolute;
-	min-width: 160px;
-	z-index: 1;
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    z-index: 1;
 }
 
 .show {
-	display: block;
+    display: block;
 }
 
 .bg-pd {
-	background-color: var(--primary-dark);
+    background-color: var(--primary-dark);
 }
 
 .bg-pl {
-	background-color: var(--primary-light);
+    background-color: var(--primary-light);
 }
 
 .bg-sd {
-	background-color: var(--secondary-dark);
+    background-color: var(--secondary-dark);
 }
 
 .bg-sl {
-	background-color: var(--secondary-light);
+    background-color: var(--secondary-light);
 }
 
 .text-pl {
-	color: var(--primary-light) !important;
+    color: var(--primary-light) !important;
 }
 
 .text-sl {
-	color: var(--secondary-light);
+    color: var(--secondary-light);
 }
 
 .text-sd {
-	color: var(--secondary-dark);
+    color: var(--secondary-dark);
 }
 
 .btn {
-	border: 0px;
-	border-radius: 0px;
-	transition: all 750ms;
+    border: 0px;
+    border-radius: 0px;
+    transition: all 750ms;
 }
 
 .btn-dark {
-	color: var(--primary-light);
-	background-color: var(--primary-dark);
+    color: var(--primary-light);
+    background-color: var(--primary-dark);
 }
 
 .btn-dark:hover {
-	background-color: var(--secondary-dark);
-	color: var(--secondary-light) !important;
+    background-color: var(--secondary-dark);
+    color: var(--secondary-light) !important;
 }
 
 .LinkButton {
-	border-bottom: solid var(--primary-accent) 5px;
-	transition: all 750ms;
-	border-top: 0px;
-	border-left: 0px;
-	border-right: 0px;
+    border-bottom: solid var(--primary-accent) 5px;
+    transition: all 750ms;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
 }
 
 .top {
-	margin-bottom: 200px;
+    margin-bottom: 200px;
 }
 
 .content,
 .content-row,
 .top-content-row {
-	position: relative;
-	z-index: 1;
+    position: relative;
+    z-index: 1;
 }
 
 .content-row {
-	margin-top: 0px;
+    margin-top: 0px;
 }
 
 .top-content-row {
-	margin-bottom: 0vh;
+    margin-bottom: 0vh;
+}
+
+.youtube-container {
+    pointer-events: none;
 }
 
 @mixin margin-top($num, $count) {
-    @if($num) {
+    @if ($num) {
         @for $i from 1 through $count {
             .mtop-#{$i*$num} {
                 margin-top: $i * $num * (1px);
             }
-        } 
+        }
     }
 }
 
 @mixin border-radius($num, $count) {
-    @if($num) {
+    @if ($num) {
         @for $i from 1 through $count {
             .br-#{$i*$num} {
-                border-radius: $i*$num* (1px);
+                border-radius: $i * $num * (1px);
             }
         }
     }
