--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -1,48 +1,52 @@
 #Homepage .col-md-5 > p {
-	padding-top: 5%;
+    padding-top: 5%;
 }
 
 #Homepage .bottom-banner {
-	background-color: var(--primary-light);
-	position: absolute;
-	bottom: 30px;
-	left: 10%;
-	right: 10%;
+    background-color: var(--primary-light);
+    position: absolute;
+    bottom: 30px;
+    left: 10%;
+    right: 10%;
 }
 
 #Homepage {
-	font-family: Consolas, monaco, monospace !important;
+    font-family: Consolas, monaco, monospace !important;
 }
 
 #Homepage .gap-image {
-	position: absolute;
+    position: absolute;
 
-	top: 300px;
+    top: 300px;
 
-	width: 100%;
+    width: 100%;
 
-	z-index: -1;
+    z-index: -1;
+}
+
+#Homepage .image-col {
+    margin: auto auto;
 }
 
 #Homepage .info-paragraph {
-	min-height: 25vh;
+    min-height: 25vh;
 }
 
 #Homepage img {
-	max-height: 45vh;
+    max-height: 45vh;
 }
 
 #Homepage iframe {
-	position: fixed;
-	height: 120%;
-	width: 120%;
-	z-index: -1;
-	left: -10%;
+    position: fixed;
+    height: 120%;
+    width: 120%;
+    z-index: -1;
+    left: -10%;
 }
 
 #Homepage .spacer {
-	height: 70vh;
-	width: 100vw;
-	z-index: 1;
-	background-color: #0000;
+    height: 70vh;
+    width: 100vw;
+    z-index: 1;
+    background-color: #0000;
 }
