--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -29,11 +29,14 @@
 }
 
 #Homepage .info-paragraph {
-    min-height: 25vh;
+    height: 40vh;
 }
 
 #Homepage img {
-    max-height: 45vh;
+    height: 45vh;
+    border: 4px solid var(--primary-dark);
+    border-radius: 10px;
+    padding: 0px;
 }
 
 #Homepage iframe {
