Minor changes, merging and deleting this branch for a 'working' branch

--- a/src/Pages/Projects/Projects.css
+++ b/src/Pages/Projects/Projects.css
@@ -37,7 +37,13 @@
     height: 0px;
 }
 
-#Projects .btn:focus {
+#Projects .no-default {
+    appearance: none;
+    -webkit-appearance: none;
+    border: 0px;
+}
+
+#Projects button:focus {
     box-shadow: none !important;
 }
 
