--- a/src/CSS/global.css
+++ b/src/CSS/global.css
@@ -4,6 +4,8 @@
   --primary-accent: #f8f32b;
   --secondary-dark: #000;
   --secondary-light: #fff;
+  --bs-body-font-family: "Rubik", Courier, monospace;
+  font-size: medium;
 }
 
 ::-webkit-scrollbar {
@@ -16,10 +18,6 @@
 
 ::-webkit-scrollbar-thumb {
   background: var(--primary-dark);
-}
-
-#app {
-  font-family: Consolas, monaco, monospace !important;
 }
 
 #app > .container::before {
@@ -170,116 +168,24 @@ a:hover {
   pointer-events: none;
 }
 
-.mtop-5 {
-  margin-top: 5px;
+.mt-6 {
+  margin-top: 4rem;
 }
 
-.mtop-10 {
-  margin-top: 10px;
+.mt-7 {
+  margin-top: 5rem;
 }
 
-.mtop-15 {
-  margin-top: 15px;
+.mt-8 {
+  margin-top: 6rem;
 }
 
-.mtop-20 {
-  margin-top: 20px;
+.mt-9 {
+  margin-top: 7rem;
 }
 
-.mtop-25 {
-  margin-top: 25px;
-}
-
-.mtop-30 {
-  margin-top: 30px;
-}
-
-.mtop-35 {
-  margin-top: 35px;
-}
-
-.mtop-40 {
-  margin-top: 40px;
-}
-
-.mtop-45 {
-  margin-top: 45px;
-}
-
-.mtop-50 {
-  margin-top: 50px;
-}
-
-.mtop-55 {
-  margin-top: 55px;
-}
-
-.mtop-60 {
-  margin-top: 60px;
-}
-
-.mtop-65 {
-  margin-top: 65px;
-}
-
-.mtop-70 {
-  margin-top: 70px;
-}
-
-.mtop-75 {
-  margin-top: 75px;
-}
-
-.mtop-80 {
-  margin-top: 80px;
-}
-
-.mtop-85 {
-  margin-top: 85px;
-}
-
-.mtop-90 {
-  margin-top: 90px;
-}
-
-.mtop-95 {
-  margin-top: 95px;
-}
-
-.mtop-100 {
-  margin-top: 100px;
-}
-
-.mtop-100 {
-  margin-top: 100px;
-}
-
-.mtop-200 {
-  margin-top: 200px;
-}
-
-.mtop-300 {
-  margin-top: 300px;
-}
-
-.mtop-400 {
-  margin-top: 400px;
-}
-
-.mtop-500 {
-  margin-top: 500px;
-}
-
-.mtop-600 {
-  margin-top: 600px;
-}
-
-.mtop-700 {
-  margin-top: 700px;
-}
-
-.mtop-800 {
-  margin-top: 800px;
+.mt-10 {
+  margin-top: 8rem;
 }
 
 .br-5 {
