--- a/src/CSS/global.scss
+++ b/src/CSS/global.scss
@@ -4,6 +4,8 @@
     --primary-accent: #f8f32b;
     --secondary-dark: #000;
     --secondary-light: #fff;
+    --bs-body-font-family: "Rubik", Courier, monospace;
+    font-size: medium;
 }
 
 ::-webkit-scrollbar {
@@ -16,10 +18,6 @@
 
 ::-webkit-scrollbar-thumb {
     background: var(--primary-dark);
-}
-
-#app {
-    font-family: Consolas, monaco, monospace !important;
 }
 
 #app > .container::before {
@@ -170,11 +168,11 @@ a:hover {
     pointer-events: none;
 }
 
-@mixin margin-top($num, $count) {
-    @if ($num) {
-        @for $i from 1 through $count {
-            .mtop-#{$i*$num} {
-                margin-top: $i * $num * (1px);
+@mixin margin-top($start, $end) {
+    @if ($start) {
+        @for $i from $start through $end {
+            .mt-#{$i} {
+                margin-top: ($i - 2) * (1rem);
             }
         }
     }
@@ -190,6 +188,5 @@ a:hover {
     }
 }
 
-@include margin-top(5, 20);
-@include margin-top(100, 8);
+@include margin-top(6, 10);
 @include border-radius(5, 5);
